# IPVanish-Client

./: LICENSE  README.md  buttonEvent.py  establish_connection.py  ipvanish  ipvanish.py  parse_ovpn_configuration_file.py  preconfig.py  requirements.txt  setup.cfg  tabs.py
modules/: choice.py  dlconfig.py  gui.py  servers.py  userpass.py
test/: countries  servers.py  test.py  threaded_downloads_progress_bar_test.py
