[metadata]
name = IPVanish-Client
version = 1.0
author = Roberto Toledo
author_email = theinkandpen@yahoo.co.uk
description = IPVanish GUI for Linux
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/g3th/IPVanish-Client
project_urls =
    Bug Tracker = https://github.com/g3th/IPVanish-Client/issues
classifiers =
    Programming Language :: Python 3.10.4
    License :: OSI Approved :: MIT License
    Operating System :: Linux/Debian

[options]
packages = find:
python_requires = >=3.10
install_requires = 

